--- a/css/login.css
+++ b/css/login.css
@@ -26,7 +26,7 @@ body {
 #login-container h3{
 	font-family: sans-serif;
 	font-weight: 600;
-	color: #1994cc;
+	color: #0a7eb3;
 	order: 0;
 	margin-top: 30px;
 	margin-bottom: 6px;
@@ -80,7 +80,7 @@ body {
 	border-radius: 5px;
 	border: none;
 	text-indent: -10px;		
-	background-color: #1ea1dc;
+	background-color: #0a7eb3;
 	color: white;
 	font-size: 16px;
 	margin-top: 20px;
